@@ -1,6 +1,9 @@
 ----------------------------------------------------------------
 Released 2.4.34 2017-04-xx
 
+Modules/
+* use errno in a safer way
+
 ----------------------------------------------------------------
 Released 2.4.33 2017-04-25
 
@@ -1358,4 +1361,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.418 2017/04/25 11:20:40 stroeder Exp $
+$Id: CHANGES,v 1.419 2017/04/25 12:45:27 stroeder Exp $
